# oreilly-epub

./: Cargo.toml  README.md
src/: epub.rs  http_client.rs  main.rs  models.rs  xml.rs
utils/: diff-epubs.sh
